# qt-qml-project-base

./: .gitignore  CMakeInstall.cmake  CMakeLists.txt  CPack.cmake  README.md
cmake/: qt-qml-base-project-config.cmake.in
docker/: ubuntu.Dockerfile
inc/: demoqobj.h
inc/demoqml/: demoqobj.h
qml/: CMakeLists.txt  main.qml
src/: demoqobj.cpp  main.cpp
templ/: version.h.in
test/package/: CMakeLists.txt
